# rustfu

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: anm2.md
gui/: Cargo.toml
gui/src/: app.rs  main.rs  renderer.rs  resources.rs  translations.rs  ui.rs  writer.rs
renderer/: Cargo.toml
renderer/shaders/: shader.frag  shader.vert
renderer/src/: backend.rs  decode.rs  frame_reader.rs  gl.rs  lib.rs  notan.rs  player.rs  render.rs  types.rs
src/: decode.rs  decoder.rs  frame_reader.rs  location.rs  main.rs  opengl.rs  render.rs  renderer.rs  resources.rs  types.rs
src/animation/: decode.rs  frame_reader.rs  mod.rs  opengl.rs  render.rs
src/data/: mod.rs  resources.rs  translations.rs
