[workspace]
members = ["gui", "renderer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
hashbrown = "0.14"
byteorder = "1.3"
euclid = "0.22"
oneshot = "0.1"
ringbuf = "0.3"
image = { version = "0.24", default-features = false }
zip = { version = "0.6", default-features = false }
webp-animation = "0.9"
notan = { version = "0.11", default-features = false }
native-dialog = "0.7"

[profile.release]
lto = "thin"
