[package]
name = "rustfu-gui"
version = "0.1.0"
edition = "2018"

[dependencies]
iced = "0.1"
nfd = "0.0.4"
zip = { version = "0.5", default-features = false, features = [ "deflate" ] }
image = { version = "0.23", default-features = false, features = [ "png" ] }
glutin = { version = "0.24" }
glow = { version = "0.5", default-features = false, features = [ "glutin" ] }
wakfudecrypt = { git = "https://gitlab.com/re.wakfu/wakfudecrypt-rs.git", rev = "eefa41c2a13bc78925a89d60edf4c2a85cb4d645" }
rustfu-renderer = { path = "../renderer" }
