[package]
name = "rustfu-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hashbrown.workspace = true
euclid.workspace = true
oneshot.workspace = true
ringbuf.workspace = true
image = { workspace = true, features = ["png"] }
zip = { workspace = true, features = ["deflate"] }
webp-animation.workspace = true
notan = { workspace = true, features = [
    "backend",
    "egui",
    "draw",
    "glsl-to-spirv",
] }
native-dialog.workspace = true
wakfudecrypt = { git = "https://gitlab.com/re.wakfu/wakfudecrypt-rs.git", rev = "eefa41c2a13bc78925a89d60edf4c2a85cb4d645" }
rustfu-renderer = { path = "../renderer", features = ["notan"] }
