[package]
name = "rustfu-renderer"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.3"
euclid = "0.22"
image = { version = "0.23", default-features = false, features = [ "png" ] }
glow = { version = "0.6", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb  = { version = "0.4" }
webgl_stdweb = { version = "0.3" }

[features]
std_web = ["glow/stdweb"]
