[package]
name = "rustfu-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hashbrown.workspace = true
byteorder.workspace = true
euclid.workspace = true
image.workspace = true
notan = { workspace = true, optional = true }

[features]
notan = ["dep:notan"]
